--- a/app/src/main/res/layout/activity_manual.xml
+++ b/app/src/main/res/layout/activity_manual.xml
@@ -19,9 +19,10 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="90dp"
+            android:layout_height="150dp"
             android:layout_weight="1"
             android:gravity="center"
+            android:padding="10dp"
             android:orientation="horizontal">
 
             <Button
@@ -65,8 +66,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="90dp"
+            android:layout_height="150dp"
             android:layout_gravity="bottom"
+            android:padding="10dp"
             android:layout_weight="1">
 
             <Button
@@ -77,6 +79,7 @@
                 android:text="Add to fridge"
                 android:textColor="@color/White" />
         </LinearLayout>
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
