--- a/app/src/main/res/layout/activity_fridge.xml
+++ b/app/src/main/res/layout/activity_fridge.xml
@@ -5,11 +5,17 @@
     android:orientation="vertical" >
 
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:onClick="clickDelete"
+        android:text="Delete" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="373dp"
         android:layout_margin="5dp"
         android:layout_weight="1"
         android:scrollbars="vertical" />
