changement des icons

--- a/app/src/main/res/layout/activity_fridge.xml
+++ b/app/src/main/res/layout/activity_fridge.xml
@@ -20,7 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:text="Find Recipes"
-        android:background="#00796B"
+        android:background="@color/colorPrimaryDark"
+        android:textColor="@color/White"
         />
 
 </LinearLayout>
