--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -13,9 +13,9 @@
         android:layout_marginBottom="100dp"
         android:layout_marginEnd="122dp"
         android:layout_marginStart="122dp"
-        android:background="@color/colorAccent"
+        android:background="@color/colorPrimaryDark"
         android:text="RETURN"
-        android:textColor="@color/zxing_status_text"
+        android:textColor="@color/White"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
