--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,58 +12,60 @@
         android:layout_width="63dp"
         android:layout_height="63dp"
         android:layout_marginStart="80dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="140dp"
         android:contentDescription="@string/imgFridge"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/fridge" />
+        app:srcCompat="@drawable/electronic" />
 
     <ImageView
         android:id="@+id/img_manual"
         android:layout_width="63dp"
         android:layout_height="63dp"
-        android:layout_marginEnd="80dp"
+        android:layout_marginEnd="70dp"
         android:layout_marginStart="98dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="140dp"
         android:contentDescription="@string/imgManual"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/img_fridge"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/manual" />
+        app:srcCompat="@drawable/tap" />
 
     <ImageView
         android:id="@+id/img_barcode"
         android:layout_width="63dp"
         android:layout_height="63dp"
-        android:layout_marginBottom="150dp"
+        android:layout_marginBottom="165dp"
         android:layout_marginStart="80dp"
+        android:contentDescription="@string/imgBarcode"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_barcode" android:contentDescription="@string/imgBarcode" />
+        app:srcCompat="@drawable/barcode" />
 
     <ImageView
         android:id="@+id/img_restaurant"
         android:layout_width="63dp"
         android:layout_height="63dp"
-        android:layout_marginBottom="150dp"
+        android:layout_marginBottom="165dp"
         android:layout_marginEnd="80dp"
         android:contentDescription="@string/imgRestaurant"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/recipes" />
+        app:srcCompat="@drawable/food" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
+        android:layout_marginStart="87dp"
         android:layout_marginTop="10dp"
         android:text="Fridge"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_fridge" />
+        app:layout_constraintTop_toBottomOf="@+id/img_fridge"
+        android:layout_marginLeft="87dp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -72,7 +74,7 @@
         android:layout_marginEnd="80dp"
         android:layout_marginTop="10dp"
         android:text="Manual"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,11 +87,12 @@
         android:layout_marginStart="80dp"
         android:layout_marginTop="10dp"
         android:text="Scanner"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_barcode" />
+        app:layout_constraintTop_toBottomOf="@+id/img_barcode"
+        android:layout_marginLeft="80dp" />
 
     <TextView
         android:id="@+id/textView4"
@@ -98,10 +101,11 @@
         android:layout_marginEnd="80dp"
         android:layout_marginTop="10dp"
         android:text="Recipes"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_restaurant" />
+        app:layout_constraintTop_toBottomOf="@+id/img_restaurant"
+        android:layout_marginRight="80dp" />
 
 </android.support.constraint.ConstraintLayout>
