--- a/app/src/main/res/layout/product_list_row.xml
+++ b/app/src/main/res/layout/product_list_row.xml
@@ -29,6 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:buttonTint="@color/checkbox"
             />
     </RelativeLayout>
 
