--- a/app/src/main/res/layout/activity_fridge.xml
+++ b/app/src/main/res/layout/activity_fridge.xml
@@ -10,7 +10,10 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:onClick="clickDelete"
-        android:text="Delete" />
+        android:text="Delete"
+        android:layout_margin="5dp"
+        android:background="@color/colorPrimaryDark"
+        android:textColor="@color/White"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
