--- a/app/src/main/res/layout/activity_fridge.xml
+++ b/app/src/main/res/layout/activity_fridge.xml
@@ -6,13 +6,14 @@
 
 
     <Button
+        android:id="@+id/btnDelete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:background="@color/colorPrimaryDark"
         android:onClick="clickDelete"
         android:text="Delete"
-        android:background="@color/colorPrimaryDark"
-        android:textColor="@color/White"/>
+        android:textColor="@color/White" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
